# incubator-teaclave-trustzone-sdk

./: .asf.yaml  .gitignore  .gitmodules  .licenserc.yaml  .travis.yml  Cargo.toml  DISCLAIMER-WIP  Dockerfile  Dockerfile.dev  Dockerfile.quickstart  KEYS  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  aarch64-unknown-optee-trustzone.json  aarch64-unknown-optee.json  arm-unknown-optee-trustzone.json  arm-unknown-optee.json  build_optee_libraries.sh  env  environment  rust-toolchain  rust-toolchain.toml  setup.sh  setup_optee_dependencies.sh  setup_std_dependencies.sh
.cargo/: config  config.toml
.github/: release-drafter.yml
ci/: ci.sh  ci_aes.sh  ci_hello_world.sh  ci_hotp.sh  ci_random.sh  ci_secure_storage.sh  ci_serde.sh  qemu-check.exp
docs/: README.md  advanced-setup.md  building-rust-ca-as-android-elf.md  debug-optee-ta.md  debugging-optee-ta.md  emulate-and-dev-in-docker-std.md  emulate-and-dev-in-docker.md  expanding-ta-secure-memory-on-qemuv8.md  getting-started-with-optee-for-qemu-armv8.md  migrating-to-new-building-env.md  overview-of-optee-rust-examples.md  release-tips.md  ta-development-modes.md  writing-rust-tas-using-optee-utee-build.md
examples/: Makefile
examples/acipher/proto/: Cargo.toml
examples/acipher/proto/src/: lib.rs
examples/aes/host/: Cargo.toml  Makefile  build.rs
examples/aes/host/src/: main.rs
examples/aes/proto/: Cargo.toml  build.rs
examples/aes/proto/src/: lib.rs
examples/aes/ta/: Cargo.toml  build.rs  ta_static.rs
examples/aes/ta/src/: main.rs
examples/error_handling-rs/host/: Cargo.toml  Makefile
examples/error_handling-rs/host/src/: main.rs
examples/hello_world/host/: Cargo.toml  Makefile  build.rs
examples/hello_world/host/src/: main.rs
examples/hello_world/ta/: Cargo.toml  Makefile  Xargo.toml  build.rs  ta_static.rs  uuid.txt
examples/hello_world/ta/src/: lib.rs  main.rs  user_ta_header_defines.h
examples/hotp/host/: Cargo.toml  Makefile  build.rs
examples/hotp/host/src/: .main.rs.swp  main.rs
examples/mnist-rs/host/: Cargo.toml  Makefile
examples/mnist-rs/host/src/: main.rs  tee.rs
examples/mnist-rs/host/src/commands/: infer.rs  mod.rs  serve.rs  train.rs
examples/mnist-rs/ta/: Cargo.toml
examples/mnist-rs/ta/common/: Cargo.toml
examples/mnist-rs/ta/common/src/: lib.rs  model.rs  utils.rs
examples/mnist-rs/ta/inference/: Cargo.toml  Makefile  build.rs  uuid.txt
examples/mnist-rs/ta/inference/src/: main.rs
examples/mnist-rs/ta/train/: Cargo.toml  Makefile  build.rs  uuid.txt
examples/mnist-rs/ta/train/src/: main.rs  trainer.rs
examples/random/host/: Cargo.toml  Makefile
examples/random/host/src/: main.rs
examples/secure_storage/host/: Cargo.toml  Makefile
examples/secure_storage/host/src/: main.rs
examples/secure_storage/ta/: Cargo.toml  Makefile  build.rs  ta_static.rs
examples/secure_storage/ta/src/: lib.rs  main.rs  user_ta_header_defines.h
examples/serde/host/: Cargo.toml  Makefile  build.rs
examples/serde/host/src/: main.rs
examples/serde/ta/: Cargo.toml  build.rs
examples/serde/ta/src/: main.rs
examples/supp_plugin/plugin/: Cargo.toml  Makefile  build.rs  plugin_static.rs
examples/supp_plugin/plugin/src/: lib.rs
examples/supp_plugin/ta/: Cargo.toml  Makefile  build.rs  ta_static.rs
examples/supp_plugin/ta/src/: main.rs
examples/tcp_client/host/: Cargo.toml  Makefile
examples/tls_server-rs/ta/: Cargo.toml  Makefile  build.rs
examples/tls_server-rs/ta/src/: main.rs
examples/tls_server-rs/ta/test-ca/: build-a-pki.sh  generate_test_certs.sh
examples/tls_server-rs/ta/test-ca/ecdsa/: ca.cert  ca.der  ca.key  end.cert  end.chain  end.fullchain  end.key  end.req  inter.cert  inter.key  inter.req
examples/udp_socket/proto/: Cargo.toml
optee-teec/: Cargo.toml
optee-teec/macros/: Cargo.toml
optee-teec/macros/src/: lib.rs
optee-teec/optee-teec/: Cargo.toml
optee-teec/optee-teec-sys/: Cargo.toml  build.rs
optee-teec/optee-teec-sys/src/: lib.rs  tee_client_api.rs
optee-teec/src/: context.rs  error.rs  extension.rs  lib.rs  operation.rs  parameter.rs  session.rs  uuid.rs
optee-teec/systest/: Cargo.toml  build.rs
optee-teec/systest/src/: main.rs
optee-utee/: Cargo.toml  Xargo.toml
optee-utee-build/: Cargo.toml
optee-utee-build/src/: builder.rs  code_generator.rs  error.rs  lib.rs  linker.rs  ta_config.rs
optee-utee-build/test_files/: test_edition_2024_result.rs  test_edition_before_2024_result.rs
optee-utee/macros/: Cargo.toml
optee-utee/macros/src/: lib.rs
optee-utee/optee-utee/: Cargo.toml
optee-utee/optee-utee-mock/: Cargo.toml
optee-utee/optee-utee-mock/src/: lib.rs  object.rs
optee-utee/optee-utee-sys/: Cargo.toml  build.rs
optee-utee/optee-utee-sys/src/: lib.rs  tee_api.rs  tee_api_defines.rs  tee_api_private.rs  tee_api_types.rs  tee_internal_api_extensions.rs  tee_internal_se_api.rs  tee_ipsocket.rs  tee_isocket.rs  tee_tcpsocket.rs  tee_udpsocket.rs  trace.rs  trace_ext.rs  user_ta_header.rs  utee_syscalls.rs  utee_types.rs
optee-utee/src/: arithmetical.rs  crypto_op.rs  error.rs  extension.rs  identity.rs  lib.rs  macros.rs  net.rs  object.rs  parameter.rs  property.rs  session.rs  ta_session.rs  tee_parameter.rs  time.rs  trace.rs  uuid.rs
optee-utee/src/net/: error.rs  mod.rs  optee.rs  optee_no_std.rs  optee_std.rs  socket.rs
optee-utee/src/object/: attribute.rs  enum_handle.rs  generic_object.rs  mod.rs  object_define.rs  object_handle.rs  object_info.rs  persistent_object.rs  transient_object.rs
optee-utee/systest/: Cargo.toml  build.rs
optee-utee/systest/src/: main.rs  undefined.c
optee_teec/: Cargo.toml  README.md  Xargo.toml  build.rs
optee_utee/: Cargo.toml  README.md  build.rs
projects/: README.md
projects/web3/eth_wallet/ta/: Cargo.toml  Makefile  Xargo.toml  build.rs  ta_static.rs
projects/web3/eth_wallet/ta/src/: hash.rs  main.rs  secure_storage.rs  wallet.rs
scripts/: entrypoint.sh
tests/: cleanup_all.sh  optee-qemuv8.sh  screenlog.0  setup.sh  test_acipher.sh  test_aes.sh  test_authentication.sh  test_big_int.sh  test_build_with_optee_utee_sys.sh  test_digest.sh  (+21 more)
(+421 files in other folders)
