[package]
name = "optee-teec"
version = "0.1.0"
authors = ["The Rust OP-TEE TrustZone SDK Project Developers"]
license = "BSD 3-Clause"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "TEE client API."
edition = "2018"

[dependencies]
optee-teec-sys = { path = "optee-teec-sys" }
libc = "0.2"
uuid = "0.7"
hex = "0.3"

[workspace]
members = ['systest']
