[package]
name = "optee-teec"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "TEE client API."
edition = "2018"

[dependencies]
optee-teec-sys = { path = "optee-teec-sys" }
optee-teec-macros = { path = "macros" }
libc = "0.2"
uuid = "0.7"
hex = "0.3"

[workspace]
members = ['systest']
