# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-utee-build"
version = "0.4.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
edition = "2018"
description = "Build tool for TA"

[dependencies]
uuid = "1.11.0"
quote = "1.0.37"
proc-macro2 = "1.0.92"
syn = "2.0.90"
prettyplease = "0.2.25"

# The newer versions of these crates require rustc 1.81, while our custom
# patched STD version is 1.80, causing compatibility issues. To resolve this,
# we have to set the crates to an exact compatible version.
# Remove them after we upgrade our patched STD rustc.
litemap = "=0.7.4"
zerofrom = "=0.1.5"
