[package]
name = "optee-utee"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "TEE internal core API."
edition = "2018"

[dependencies]
optee-utee-sys = { path = "optee-utee-sys" }
optee-utee-macros = { path = "macros" }
libc = { path = "../rust/libc", version = "=0.2.59" }
bitflags = "1.0.4"

[workspace]
members = ['systest']
