# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-utee"
version = "0.3.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "TEE internal core API."
edition = "2018"

[dependencies]
optee-utee-sys = { version = "0.3.0", path = "optee-utee-sys" }
optee-utee-macros = { version = "0.3.0", path = "macros" }
bitflags = "1.0.4"
uuid = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
libc_alloc = "1.0.5"

[dev-dependencies]
rand = "0.8.5"
once_cell = "1.20.2"
serde = { version = "1.0.215" }
serde_json = { version = "1.0.133" }

[features]
no_panic_handler = []

[workspace]
members = ['systest']
