[package]
name = "optee-teec-sys"
version = "0.1.0"
authors = ["The Rust OP-TEE TrustZone SDK Project Developers"]
license = "BSD 3-Clause"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "Native bindings to the libteec library."
edition = "2018"

[dependencies]
libc = "0.2.48" 
