[package]
name = "systest"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "Automatic testing of FFI bindings for the libteec library."
edition = "2018"

[dependencies]
optee-teec-sys = { path = "../optee-teec-sys" }
libc = "0.2"

[build-dependencies]
ctest = "0.2"
