[package]
name = "systest"
version = "0.1.0"
authors = ["The Rust OP-TEE TrustZone SDK Project Developers"]
license = "Apache-2.0"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "Automatic testing of FFI bindings for the libutee library."
edition = "2018"

[dependencies]
optee-utee-sys = { path = "../optee-utee-sys" }
libc = "=0.2.59"

[build-dependencies]
ctest = "0.2"
