[package]
name = "systest"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "Automatic testing of FFI bindings for the libutee library."
edition = "2018"

[dependencies]
optee-utee-sys = { path = "../optee-utee-sys" }
libc = "=0.2.59"

[build-dependencies]
ctest = "0.2"
