[package]
name = "aes_functions"
version = "0.1.0"
authors = ["Mingshen Sun <mssun@mesalock-linux.org>",
           "Shengye Wan <swan@email.wm.edu>"]
edition = "2018"

[dependencies]
libc = "0.2.48"
optee-teec = { path = "../../../optee-teec" }
optee-teec-sys = { path = "../../../optee-teec/optee-teec-sys" }
