[package]
name = "ta"
version = "0.1.0"
authors = ["Mingshen Sun <mssun@mesalock-linux.org>",
           "Shengye Wan <swan@email.wm.edu>"]
edition = "2018"

[dependencies]
libc = { path = "../../../rust/libc" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }

[build_dependencies]
uuid = { version = "0.7", features = ["v4"] }
