# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "mnist-rs"
version = "0.4.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2021"
publish = false

[dependencies]
proto = { path = "../proto" }
optee-teec = { path = "../../../optee-teec" }
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
rust-mnist = "0.2.0"
bytemuck = { version = "1.21.0", features = ["min_const_generics"] }
serde_json = "1.0.139"
image = "0.25.5"
tiny_http = "0.12.0"
anyhow = "1.0.97"
ureq = "3.0.8"
flate2 = "1.1.0"

[profile.release]
lto = true
