# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"

members = [
    "common",
    "train",
    "inference",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.4.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]

[workspace.dependencies]
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
optee-utee-build = { path = "../../../optee-utee-build" }

proto = { path = "../proto" }

bytemuck = { version = "1.21.0", features = ["min_const_generics"] }
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "a1ca4346424197f42ab1b5bff7f9d1210b029318", default-features = false, features = ["ndarray", "autodiff"] }
spin = "0.9.8"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }


[profile.release]
panic = "abort"
lto = true
opt-level = 1
