[package]
name = "random"
version = "0.1.0"
authors = ["The Rust OP-TEE TrustZone SDK Project Developers"]
license = "BSD 3-Clause"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
libc = "0.2.48"
optee-teec = { path = "../../../optee-teec" }

[build_dependencies]
uuid = { version = "0.7", features = ["v4"] }
