[package]
name = "ta"
version = "0.1.0"
authors = ["Mingshen Sun <mssun@mesalock-linux.org>",
           "Shengye Wan <swan@email.wm.edu>"]
edition = "2018"

[lib]
name = "ta"
crate-type = ["staticlib"]

# [profile.dev]
# panic = "abort"

# [profile.release]
# panic = "abort"

[dependencies]
libc = { path = "../../../rust/libc", default-features = false }
optee_utee = { path = "../../../optee_utee" }
