[package]
name = "ta"
version = "0.1.0"
authors = ["The Rust OP-TEE TrustZone SDK Project Developers"]
license = "BSD 3-Clause"
repository = "https://github.com/mesalock-linux/rust-optee-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
libc = { path = "../../../rust/libc" }
optee-utee-sys = { path = "../../../optee-utee/optee-utee-sys" }
optee-utee = { path = "../../../optee-utee" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build_dependencies]
uuid = { version = "0.7", features = ["v4"] }
