[package]
name = "syslog_plugin"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "An example of Rust OP-TEE TrustZone SDK."
edition = "2018"

[dependencies]
libc = "0.2.48"
proto = { path = "../proto" }
optee-teec = { path = "../../../optee-teec" }
optee-teec-sys = { path = "../../../optee-teec/optee-teec-sys" }

[build_dependencies]
uuid = { version = "0.8" }
proto = { path = "../proto" }

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]
name = "syslog_plugin"
