[package]
name = "proto"
version = "0.1.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-teaclave-trustzone-sdk.git"
description = "Data structures and functions shared by host and TA."
edition = "2018"

[dependencies]

[build_dependencies]
uuid = { version = "0.8" }
